baremetal-rpi/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-k3s-kluster
  namespace: keycloak
spec:
  rules:
    - host: auth.k3s-kluster.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak-http
                port:
                  name: http
  tls:
    - hosts:
        - auth.k3s-kluster.com
      secretName: auth-k3s-kluster-tls
